--- a/style.css
+++ b/style.css
@@ -1,8 +1,125 @@
-<!DOCTYPE css>
 *{
-padding:0;
-margin:0;
+    padding:0;
+    margin:0;
 }
+
 body{
-overflow-x;hidden;
+    overflow-x:hidden;
+    font-family: 'Open Sans', sans-serif;
+    text-rendering: optimizeLegibility !important;
 }
+
+a{
+    text-decoration: none;
+    transition: all 500ms ease-in-out;
+}
+
+h1, h2, h4{
+    font-family: 'PT Sans Narrow', Arial, sans-serif;
+    text-transform: uppercase ;
+    font-weight: 500;
+    padding-top: 10px;
+}
+
+p{
+    font-size: 15px;
+    line-height: 25px;
+}
+
+.btn{
+    transition: all 300ms ease-in-out;
+    font-weight: 500 !important;
+    text-transform: uppercase;
+}
+
+.btn:hover{
+    background-color: #ededed !important;
+    color: #3c3c3c !important;
+    border: 1px solid #fff !important;
+}
+
+/*NAVIGATION*/
+
+.navbar{
+    text-transform: uppercase;
+    font-family: 'PT Sans Narrow', Arial, sans-serif;
+    font-weight: 500;
+}
+
+/*HEADER*/
+
+.headrer{
+    box-sizing: border-box;
+}
+
+.slideshow-container{
+    position: relative;
+    margin: auto;
+}
+
+.header .myimages img{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 1500px;
+    height: 500px;
+}
+
+/*ABOUT US*/
+.about {
+    padding: 80px 0 80px;
+    text-align: center;
+}
+
+.about span{
+    width: 100px;
+    color: #4c4c4c;
+    padding: 10px;
+    display: inline-block;
+    font-size: 20px;
+}
+
+.about i {
+    height: 50px;
+    width: 50px;
+    font-size: 25px;
+    padding: 15px 10px;
+    border-radius: 40%;
+    background-color: #5cb85c;
+    color:#fff;
+}
+
+/*MEET OUR TEAM*/
+.team h3{
+    margin-top: 30px;
+}
+
+.team img{
+    margin-top: 30px;
+    border-radius:40%;
+}
+
+.team p{
+    color:#737373;
+}
+
+/*GET INVOLVED*/
+.getinvoloved{
+    padding:50px 0 80px;
+    text-align:center;
+    background-color: #5cb85c;
+    margin-top:50px;
+}
+
+.getinvolved h2{
+    color:#fff;
+}
+
+.getinvolved .options{
+    padding:30px;
+    border: 1px solid #ccc;
+    background-color:#fff;
+    border-radius:5px;
+    margin-top:30px;
+}
+
