--- a/style.css
+++ b/style.css
@@ -123,3 +123,56 @@ p{
     margin-top:30px;
 }
 
+.getinvolved i{
+    width:50px;
+    height:50px;
+    font-size:40px;
+}
+
+/*CONTACT*/
+.contact{
+    background-color:#fff;
+    margin-top: 20px;
+}
+
+.contact .message{
+    height: 100px;
+    margin-bottom: 5px;
+}
+
+/*FOOTER*/
+.footer{
+    background-color:#fff;
+    margin-top:20px;
+}
+
+.footer .btn{
+    margin-top:5px;
+}
+
+.footer i{
+    font-size: 20px;
+}
+
+/*DONATE*/
+.donate{
+    background-color:#fff;
+    margin-top:20px;
+}
+
+.donate button{
+    padding: 10px;
+    width: 100px;
+    margin: 5px;
+}
+
+.donate .btn:hover{
+    background-color:#428bca !important;
+    color:#fff !important;
+}
+
+.donate .form-control{
+    width:330px;
+    padding:10px;
+    margin:5px;
+}
